# OpenGL_Camera

./: gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/rzm/opengl_camera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CameraPreviewManager.cpp  native-lib.cpp
app/src/main/cpp/camera_preview/: CameraPreviewController.cpp  CameraPreviewRender.cpp
app/src/main/cpp/egl/: egl.cpp
app/src/main/cpp/header/: CameraPreviewController.h  CameraPreviewRender.h  CommonUtils.h  GPUTextureFrame.h  GPUTextureFrameCopier.h  Log.h  OpenglUtils.h  TextureFrame.h  TextureFrameCopier.h  VideoGLSurfaceRender.h  com_rzm_opengl_camera_camera_manager_CameraPreviewManager.h  egl.h  handler.h  message_queue.h
app/src/main/cpp/message_queue/: handler.cpp  message_queue.cpp
app/src/main/cpp/opengl/: GPUTextureFrame.cpp  GPUTextureFrameCopier.cpp  TextureFrame.cpp  TextureFrameCopier.cpp  VideoGLSurfaceRender.cpp
app/src/main/java/com/rzm/opengl_camera/: MainActivity.java
app/src/main/java/com/rzm/opengl_camera/camera/: CommonCamera1.java
app/src/main/java/com/rzm/opengl_camera/camera/configure/: CameraConfigure.java
app/src/main/java/com/rzm/opengl_camera/camera/manager/: CameraPreviewManager.java
app/src/main/java/com/rzm/opengl_camera/camera/view/: CameraSurfaceView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/rzm/opengl_camera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
